syntax = "proto3";

package race;

import "race/request.proto";

service RaceService {
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {}
  rpc GetRace(GetRaceRequest) returns (GetRaceResponse) {}
  rpc CreateRace(CreateRaceRequest) returns (CreateRaceResponse) {}
  rpc UpdateRace(UpdateRaceRequest) returns (UpdateRaceResponse) {}
  rpc DeleteRace(DeleteRaceRequest) returns (DeleteRaceResponse) {}
}

